--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-
+# Android project settings
+.idea/
 # FVM Version Cache
 .fvm/
 # Miscellaneous
@@ -120,3 +121,4 @@ app.*.symbols
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
+/.idea/libraries/Flutter_Plugins.xml
