--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: cavscanner
-description: "A new Flutter project."
+description: "Skenování Člověk a Víra výstav."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -34,7 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-
+  intl: ^0.19.0
+  sembast: ^3.8.4
+  sembast_web: ^2.4.1
+  path_provider: ^2.1.5
+  mobile_scanner: ^6.0.7
+  pwa_install: ^0.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
