--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,4 @@ app.*.symbols
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
 /.idea/libraries/Flutter_Plugins.xml
+.dart_tool/package_config.json
