--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,12 @@ dependencies:
   sembast: ^3.8.4
   sembast_web: ^2.4.1
   path_provider: ^2.1.5
-  mobile_scanner: ^6.0.7
+  mobile_scanner: ^6.0.10
   pwa_install: ^0.0.5
+  vibration: ^3.1.3
+  assets_audio_player: ^3.0.3+6
 dev_dependencies:
+  flutter_launcher_icons: ^0.14.3
   flutter_test:
     sdk: flutter
 
@@ -62,6 +65,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/success.wav
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
