--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   mobile_scanner: ^6.0.10
   pwa_install: ^0.0.5
   vibration: ^3.1.3
-  assets_audio_player: ^3.0.3+6
+  just_audio: ^0.10.2
 dev_dependencies:
   flutter_launcher_icons: ^0.14.3
   flutter_test:
